<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:windowBackground="@color/white">
    <android.support.v7.preference.PreferenceCategory android:title="Settings">
            <com.example.asd.shoppinglistproject.NumberPickerPreference
                android:key="text_size"
                android:title="@string/Font_Size"
                android:summary="@string/Font_size_Description"
                android:defaultValue="24" />
            <com.example.asd.shoppinglistproject.ColorPickerPreference
                android:key="font_color"
                android:title="@string/Font_Color"
                android:summary="@string/Font_color_Description"
                android:defaultValue="0"/>
    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>